--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,9 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+name: "Release Draft"
+description: "Drafts a GitHub release with the changes introduced by a newly created version tag"
+author: "John Cassidy"
+outputs:
+  release-url:
+    description: "The URL of the GitHub release that was drafted"
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: "node16"
+  main: "dist/index.js"
