--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,18 @@
 		"@typescript-eslint"
 	],
 	"extends": [
-		"plugin:github/recommended"
+		"plugin:github/recommended",
+		"plugin:prettier/recommended",
+		"eslint:recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 9,
 		"sourceType": "module",
-		"project": "./tsconfig.json"
+		"project": [
+			"./tsconfig.json",
+			"./__tests__/tsconfig.json"
+		]
 	},
 	"rules": {
 		"i18n-text/no-en": "off",
