--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,8 @@
 			"never"
 		],
 		"@typescript-eslint/type-annotation-spacing": "error",
-		"@typescript-eslint/unbound-method": "error"
+		"@typescript-eslint/unbound-method": "error",
+		"@typescript-eslint/camelcase": "off"
 	},
 	"env": {
 		"node": true,
