--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Get the sources
         uses: actions/checkout@v3
+      - name: Build and Package
+        run: npm run ci && npm run buildpackage
       - name: Create a release draft for a version tag
         id: create-release-draft
         uses: ./
