--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Get the sources
         uses: actions/checkout@v3
       - name: Build and Package
-        run: npm run ci && npm run buildpackage
+        run: npm ci && npm run buildpackage
       - name: Create a release draft for a version tag
         id: create-release-draft
         uses: ./
